per seat problem solve

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
         </section>
         <!-- P H paribahan section  -->
-        <section id="paribahan" class="bg-primaryBgColor border-t-2 rounded-t-[80px] border-primaryColor my-28">
+        <section id="paribahan" class="bg-primaryBgColor border-t-2 rounded-t-[80px] border-primaryColor mt-28">
             <!-- p.h info part  -->
             <div class="w-10/12 mt-28 m-6 mx-auto">
                 <h1 class="text-center text-[40px] font-bold text-primaryTitleColor font-raleway">P.H Paribahan
@@ -211,7 +211,8 @@
                     <img class="mx-8 border-2 border-gray-300 border-dashed" src="images/info-devider.png" alt="">
                     <div class="flex-1 text-center font-raleway">
                         <img class="border-2 border-gray-300 border-dashed mx-auto mb-6" src="images/fare.png" alt="">
-                        <h1 class="font-bold text-3xl text-primaryTitleColor">550 Taka</h1>
+                        <h1 class="font-bold text-3xl text-primaryTitleColor"><span id="per-seat-price">550</span> Taka
+                        </h1>
                         <p class="font-semibold text-2xl text-primaryDesColor">Per Seat</p>
                     </div>
                 </div>
@@ -498,35 +499,36 @@
                     </div>
                 </div>
             </div>
-        </section>
-    </main>
-    <!-- footer section  -->
-    <footer class="bg-black px-8 py-16">
-        <div class="flex justify-between items-center w-10/12 mx-auto">
-            <div>
-                <h1 class="text-white text-3xl font-bold font-inter">P-Ticket</h1>
-                <p class="text-gray-300 text-xl mt-2">To making a better daily commuting you can choose it.</p>
-                <p class="text-gray-300 mt-10">@all rights reserved, P-Ticket services limited.2024</p>
-            </div>
-            <div>
-                <div class="text-end">
-                    <h3 class="text-2xl font-bold text-white">DownLoad Our App</h3>
-                    <div class="flex justify-around my-4 gap-2 border border-gray-300 rounded-sm">
-                        <img src="images/playstore.png" alt="">
-                        <div class="text-white">
-                            <h5 class="text-lg">GET IT ON</h5>
-                            <h2 class="text-2xl font-semibold">Google Play</h2>
+            <!-- footer section  -->
+            <footer class="bg-black px-8 py-16 mt-28">
+                <div class="flex justify-between items-center w-10/12 mx-auto">
+                    <div>
+                        <h1 class="text-white text-3xl font-bold font-inter">P-Ticket</h1>
+                        <p class="text-gray-300 text-xl mt-2">To making a better daily commuting you can choose it.</p>
+                        <p class="text-gray-300 mt-10">@all rights reserved, P-Ticket services limited.2024</p>
+                    </div>
+                    <div>
+                        <div class="text-end">
+                            <h3 class="text-2xl font-bold text-white">DownLoad Our App</h3>
+                            <div class="flex justify-around my-4 gap-2 border border-gray-300 rounded-sm">
+                                <img src="images/playstore.png" alt="">
+                                <div class="text-white">
+                                    <h5 class="text-lg">GET IT ON</h5>
+                                    <h2 class="text-2xl font-semibold">Google Play</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex justify-end gap-4 text-end text-white text-xs font-semibold font-inter">
+                            <p>Terms & Condition</p>
+                            <p>Return & refund policy</p>
+                            <p>Privacy policy</p>
                         </div>
                     </div>
                 </div>
-                <div class="flex justify-end gap-4 text-end text-white text-xs font-semibold font-inter">
-                    <p>Terms & Condition</p>
-                    <p>Return & refund policy</p>
-                    <p>Privacy policy</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+            </footer>
+        </section>
+    </main>
+
 
     <!-- script file  -->
     <script src="scripts/script.js"></script>
