--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
     <!-- header section  -->
-    <header class="w-10/12 mx-auto pt-6 mb-16">
+    <header class="w-10/12 mx-auto pt-6 mb-16 relative">
         <!-- nav bar part  -->
         <nav class="navbar font-raleway p-0">
             <div class="navbar-start">
@@ -73,7 +73,7 @@
         </nav>
         <!-- banner part  -->
         <section
-            class="bg-[url('./images/banner.png')] bg-no-repeat bg-contain bg-center min-h-[550px] text-white mt-8 flex items-center justify-center">
+            class="bg-[url('./images/banner.png')] bg-no-repeat bg-contain bg-center min-h-screen text-white mt-12 flex items-center justify-center">
             <div class="w-8/12 text-center space-y-8">
                 <h1 class="text-6xl font-extrabold">End-to-End Travel with <br><span class="text-primaryColor">P
                         Paribahan</span></h1>
@@ -86,13 +86,13 @@
                     Tickets</button>
         </section>
         <!-- header badge  -->
-        <section class="flex justify-center gap-5 relative bottom-16">
+        <section class="flex justify-center gap-6 absolute -bottom-3 w-2/3 left-[15%] right-[15%]">
             <div
-                class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-4 text-center border-b-2 border-primaryColor">
+                class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-3 text-center border-b-2 border-primaryColor">
                 <img src="images/people.png" alt="">
                 <div>
                     <h1 class="text-primaryTitleColor text-4xl font-bold">500K+</h1>
-                    <p class="text-primaryDesColor text-lg">Registered users</p>
+                    <p class="text-primaryDesColor text-sm">Registered users</p>
                 </div>
             </div>
             <div
@@ -100,7 +100,7 @@
                 <img src="images/ticket-cupon.png" alt="">
                 <div>
                     <h1 class="text-primaryTitleColor text-4xl font-bold">500K+</h1>
-                    <p class="text-primaryDesColor text-lg">Tickets sold</p>
+                    <p class="text-primaryDesColor text-sm">Tickets sold</p>
                 </div>
             </div>
             <div
@@ -108,7 +108,7 @@
                 <img src="images/stoppage.png" alt="">
                 <div>
                     <h1 class="text-primaryTitleColor text-4xl font-bold">500K+</h1>
-                    <p class="text-primaryDesColor text-lg">Rental Partners</p>
+                    <p class="text-primaryDesColor text-sm">Rental Partners</p>
                 </div>
             </div>
         </section>
