--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     Tickets</button>
         </section>
         <!-- header badge  -->
-        <section class="flex justify-center gap-6 absolute -bottom-3 w-2/3 left-[15%] right-[15%]">
+        <section class="flex justify-center gap-6 absolute -bottom-5 left-[15%] right-[15%]">
             <div
                 class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-3 text-center border-b-2 border-primaryColor">
                 <img src="images/people.png" alt="">
