banner img bug fix

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
     <!-- header section  -->
-    <header class="w-10/12 mx-auto pt-6 mb-16 relative">
+    <header class="w-10/12 mx-auto pt-6 mb-16">
         <!-- nav bar part  -->
         <nav class="navbar font-raleway p-0">
             <div class="navbar-start">
