banner img badge panic

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </nav>
         <!-- banner part  -->
         <section
-            class="bg-[url('./images/banner.png')] bg-no-repeat bg-contain bg-center min-h-screen text-white mt-12 flex items-center justify-center">
+            class="bg-[url('./images/banner.png')] bg-no-repeat bg-contain bg-center min-h-screen text-white mt-12 flex items-center justify-center relative">
             <div class="w-8/12 text-center space-y-8">
                 <h1 class="text-6xl font-extrabold">End-to-End Travel with <br><span class="text-primaryColor">P
                         Paribahan</span></h1>
@@ -84,34 +84,35 @@
                 <button id="buy-ticket-btn"
                     class="bg-primaryColor border-none text-primaryTitleColor text-xl font-bold px-7 py-5 rounded-xl content-center">Buy
                     Tickets</button>
+                <!-- header badge  -->
+                <section class="flex justify-center gap-6 absolute -bottom-4 left-[15%] right-[15%]">
+                    <div
+                        class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-3 text-center border-b-2 border-primaryColor">
+                        <img src="images/people.png" alt="">
+                        <div>
+                            <h1 class="text-primaryTitleColor text-4xl font-bold">500K+</h1>
+                            <p class="text-primaryDesColor text-sm">Registered users</p>
+                        </div>
+                    </div>
+                    <div
+                        class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-4 text-center border-b-2 border-primaryColor">
+                        <img src="images/ticket-cupon.png" alt="">
+                        <div>
+                            <h1 class="text-primaryTitleColor text-4xl font-bold">500K+</h1>
+                            <p class="text-primaryDesColor text-sm">Tickets sold</p>
+                        </div>
+                    </div>
+                    <div
+                        class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-4 text-center border-b-2 border-primaryColor">
+                        <img src="images/stoppage.png" alt="">
+                        <div>
+                            <h1 class="text-primaryTitleColor text-4xl font-bold">500K+</h1>
+                            <p class="text-primaryDesColor text-sm">Rental Partners</p>
+                        </div>
+                    </div>
+                </section>
         </section>
-        <!-- header badge  -->
-        <section class="flex justify-center gap-6 absolute -bottom-5 left-[15%] right-[15%]">
-            <div
-                class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-3 text-center border-b-2 border-primaryColor">
-                <img src="images/people.png" alt="">
-                <div>
-                    <h1 class="text-primaryTitleColor text-4xl font-bold">500K+</h1>
-                    <p class="text-primaryDesColor text-sm">Registered users</p>
-                </div>
-            </div>
-            <div
-                class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-4 text-center border-b-2 border-primaryColor">
-                <img src="images/ticket-cupon.png" alt="">
-                <div>
-                    <h1 class="text-primaryTitleColor text-4xl font-bold">500K+</h1>
-                    <p class="text-primaryDesColor text-sm">Tickets sold</p>
-                </div>
-            </div>
-            <div
-                class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-4 text-center border-b-2 border-primaryColor">
-                <img src="images/stoppage.png" alt="">
-                <div>
-                    <h1 class="text-primaryTitleColor text-4xl font-bold">500K+</h1>
-                    <p class="text-primaryDesColor text-sm">Rental Partners</p>
-                </div>
-            </div>
-        </section>
+
     </header>
     <!-- main section start  -->
     <main>
