--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </nav>
         <!-- banner part  -->
         <section
-            class="bg-[url('./images/banner.png')] bg-no-repeat bg-contain bg-center min-h-screen text-white mt-12 flex items-center justify-center relative">
+            class="bg-[url('./images/banner.png')] bg-no-repeat bg-contain bg-center min-h-[550px] text-white mt-12 flex items-center justify-center relative">
             <div class="w-8/12 text-center space-y-8">
                 <h1 class="text-6xl font-extrabold">End-to-End Travel with <br><span class="text-primaryColor">P
                         Paribahan</span></h1>
@@ -85,7 +85,7 @@
                     class="bg-primaryColor border-none text-primaryTitleColor text-xl font-bold px-7 py-5 rounded-xl content-center">Buy
                     Tickets</button>
                 <!-- header badge  -->
-                <section class="flex justify-center gap-6 absolute -bottom-4 left-[15%] right-[15%]">
+                <section class="flex justify-center gap-6 absolute -bottom-12 left-[15%] right-[15%]">
                     <div
                         class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-3 text-center border-b-2 border-primaryColor">
                         <img src="images/people.png" alt="">
@@ -115,7 +115,7 @@
 
     </header>
     <!-- main section start  -->
-    <main>
+    <main class="mt-28">
         <!-- best offers section  -->
         <section class="w-10/12 mx-auto">
             <h1 class="text-center text-[40px] font-bold text-primaryTitleColor font-raleway mb-12">Best offers for you
