banner cover add

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </nav>
         <!-- banner part  -->
         <section
-            class="bg-[url('./images/banner.png')] bg-no-repeat bg-cover rounded-3xl bg-center min-h-[550px] text-white mt-12 flex items-center justify-center relative ">
+            class="bg-[url('./images/banner.png')] bg-no-repeat bg-cover rounded-3xl bg-center min-h-screen text-white mt-12 flex items-center justify-center relative ">
             <div class="w-8/12 text-center space-y-8">
                 <h1 class="text-6xl font-extrabold">End-to-End Travel with <br><span class="text-primaryColor">P
                         Paribahan</span></h1>
@@ -115,7 +115,7 @@
 
     </header>
     <!-- main section start  -->
-    <main class="mt-28">
+    <main class="mt-44">
         <!-- best offers section  -->
         <section class="w-10/12 mx-auto">
             <h1 class="text-center text-[40px] font-bold text-primaryTitleColor font-raleway mb-12">Best offers for you
