--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
             </div>
         </nav>
         <!-- banner part  -->
-        <section
-            class="bg-[url('./images/banner.png')] bg-no-repeat bg-cover rounded-3xl bg-center min-h-screen text-white mt-12 flex items-center justify-center relative ">
+        <section class="bg-banner-img rounded-[32px] text-white mt-12 flex items-center justify-center relative ">
             <div class="w-8/12 text-center space-y-8">
                 <h1 class="text-6xl font-extrabold">End-to-End Travel with <br><span class="text-primaryColor">P
                         Paribahan</span></h1>
