--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                                         your email.
                                     </p>
                                     <form method="dialog">
-                                        <button
+                                        <button onclick="refreshPage()" id="continue-btn"
                                             class="py-5 px-20 rounded-3xl bg-green-600 text-white text-xl font-bold">Continue</button>
                                     </form>
                                 </div>
